cabal-version:      3.0
name:               package-imports
version:            0.1.0.0
license:            MPL-2.0
license-file:       LICENSE
author:             Phil de Joux
maintainer:         philderbeast@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib
  build-depends:    base, a, b
  hs-source-dirs:   src
  default-language: Haskell2010

library a
  exposed-modules: A
  hs-source-dirs: src-a
  build-depends: base

library b
  exposed-modules: A
  hs-source-dirs: src-b
  build-depends: base
